Quorum/Library/Tests/Actions/Fail/MissingMain.quorum
action foo1
    x = 1
end

action Main
    foo1
end